do not mount to the same spot as the config is mounted

--- a/kustomization/overlays/prod/traefik/patches/add_authelia_user_secrets.yml
+++ b/kustomization/overlays/prod/traefik/patches/add_authelia_user_secrets.yml
@@ -9,7 +9,7 @@ spec:
       containers:
         - name: authelia
           volumeMounts:
-            - mountPath: /config/prod/
+            - mountPath: /secrets/authelia/users
               name: authelia-users
               readOnly: true
       volumes:
