--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -37,6 +37,10 @@ vyos_firewall_global__group:
       description: The v4 address of the Jellyfin Server.
       members:
         - address: 10.11.1.1
+    - name: LG-GIT-SSH-v4
+      afi: ipv4
+      members:
+        - address: 10.11.1.70
     - name: UNIFI-v4
       description: The v4 address of the Unifi Controller
       afi: ipv4
@@ -62,6 +66,9 @@ vyos_firewall_global__group:
       description: Ports used by the Jellyfin server
       members:
         - port: 7359
+    - name: LG-GIT-SSH
+      members:
+        - port: 2222
     - name: TRAEFIK-EXT
       members:
         - port: 8443
