--- a/kustomization/components/valheim/statefulset.yml
+++ b/kustomization/components/valheim/statefulset.yml
@@ -74,7 +74,7 @@ spec:
               cpu: 500m
               memory: 400Mi
           securityContext:
-            allowPrivilegeEscalation: false
+            allowPrivilegeEscalation: true
             seccompProfile:
               type: RuntimeDefault
           volumeMounts:
