use a Local external traffic policy for gitea ssh

--- a/kustomization/overlays/prod/lg/patches/set_gitea_ssh_service.yml
+++ b/kustomization/overlays/prod/lg/patches/set_gitea_ssh_service.yml
@@ -5,6 +5,7 @@ metadata:
   name: this-is-ignored-but-is-required
 spec:
   clusterIP: null
+  externalTrafficPolicy: Local
   loadBalancerIP: 10.11.1.70
   ports:
     - name: ssh
