--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
-COLLECTIONS_PATHS=~/ansible-collection-dev:~/.ansible/collections:/usr/share/ansible/collections
+collections_path=external_collections:/usr/share/ansible/collections
 INTERPRETER_PYTHON=auto
 inventory=prod-inventory
 remote_user=ansible
-roles_path=roles:~/.ansible/roles
+roles_path=roles:external_roles
 VAULT_PASSWORD_FILE=.ansible_vault_password
 
 [persistent_connection]
