--- a/plays/hosts/monitor.house.gem.hogs.tswn.us.yml
+++ b/plays/hosts/monitor.house.gem.hogs.tswn.us.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "monitor.house.gem.hogs.tswn.us"
+- name: Play for monitor.house.gem.hogs.tswn.us
   become: true
+  hosts: monitor.house.gem.hogs.tswn.us
   roles:
-    - role: "docker-brultech-serial2mqtt"
+    - role: docker-brultech-serial2mqtt
