--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -61,4 +61,4 @@ docker__users:
 docker__pip_docker_compose_state: present
 
 reboot_test_command: whoami
-ssh_listen_to: "{{ common__ip_addresses | ansible.netcommon.ipaddr('address') }}"
+ssh_listen_to: "{{ common__ip_addresses | ansible.utils.ipaddr('address') }}"
