--- a/host_vars/lighterthansome.hogs.tswn.us.yml
+++ b/host_vars/lighterthansome.hogs.tswn.us.yml
@@ -1,4 +1,4 @@
 ---
-ansible_cron__interval: no # Only run on reboot
+ansible_cron__interval: false # Only run on reboot
 
 common__ip_addresses: [] # Networking not managed by Ansible
