--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -96,7 +96,7 @@ vyos_firewall_global__group:
 
 vyos_firewall__zones:
   - name: LOCAL
-    local-zone: yes
+    local-zone: true
   - name: MACCABEUS
     interfaces:
       - wg0
