--- a/kustomization/overlays/prod/vector/aggregator-values.yml
+++ b/kustomization/overlays/prod/vector/aggregator-values.yml
@@ -19,9 +19,9 @@ affinity:
 customConfig:
   # API is enabled for the liveness probe.
   api:
-    enabled: yes
+    enabled: true
     address: 127.0.0.1:8686
-    playground: no
+    playground: false
   data_dir: /vector-data-dir
   sinks:
     prom_exporter:
@@ -39,4 +39,4 @@ customConfig:
       version: "2"
 
 serviceHeadless:
-  enabled: no
+  enabled: false
