--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -33,4 +33,4 @@ common__etc_dir: "/etc"
 
 common__ntp_pool: "pool.ntp.hogs.tswn.us"
 # If the machine should be a ntp server or not.
-common__be_ntp_server: no
+common__be_ntp_server: false
