--- a/roles/vyos-dns-forwarding/tasks/main.yml
+++ b/roles/vyos-dns-forwarding/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Setup DNS forwarding
   vyos.vyos.vyos_config:
     src: dns_forwarding.j2
-    save: yes
+    save: true
   when: "vyos_dns_forwarding__listen_addresses | default([]) | length > 0"
   tags:
     - dns
