--- a/roles/vyos-interfaces/tasks/main.yml
+++ b/roles/vyos-interfaces/tasks/main.yml
@@ -13,11 +13,11 @@
 - name: "Setup PPPOE"
   vyos.vyos.vyos_config:
     src: "pppoe_config.j2"
-    save: yes
+    save: true
   when: "vyos_interfaces__pppoe | default([]) | length > 0"
 
 - name: "Setup Wireguard"
   vyos.vyos.vyos_config:
     src: "wireguard_config.j2"
-    save: yes
+    save: true
   when: "vyos_interfaces__wireguard | default([]) | length > 0"
