--- a/host_vars/worker01.hogs.tswn.us.yml
+++ b/host_vars/worker01.hogs.tswn.us.yml
@@ -6,7 +6,7 @@ common__interfaces:
       name: bond0
       slaves:
         - mac: a0:36:bc:d9:32:a6
-          primary: yes
+          primary: true
         - mac: 6c:4b:90:04:6d:83
 
 common__ip_addresses:
