--- a/host_vars/worker02.hogs.tswn.us.yml
+++ b/host_vars/worker02.hogs.tswn.us.yml
@@ -6,7 +6,7 @@ common__interfaces:
       name: bond0
       slaves:
         - mac: 08:bf:b8:56:45:e8
-          primary: yes
+          primary: true
         - mac: 6c:4b:90:5a:9b:95
 
 common__ip_addresses:
