--- a/plays/k8s/cert-manager/tasks.yml
+++ b/plays/k8s/cert-manager/tasks.yml
@@ -10,7 +10,7 @@
         name: cert-manager
 - name: Create Secret for the Cloudflare API Token
   kubernetes.core.k8s:
-    apply: yes
+    apply: true
     context: "{{ cluster }}"
     resource_definition:
       apiVersion: v1
