--- a/roles/common-rpi/tasks/cm4io-fan.yml
+++ b/roles/common-rpi/tasks/cm4io-fan.yml
@@ -4,14 +4,14 @@
   ansible.builtin.apt:
     name: "dkms"
     state: "present"
-  become: yes
+  become: true
 - name: "Fetch cm4io-fan kernel module"
   ansible.builtin.git:
     repo: "https://github.com/neg2led/cm4io-fan.git"
     dest: "/usr/src/cm4io-fan-0.1.1/"
     refspec: "refs/tags/0.2.0"
     version: "origin/master"
-  become: yes
+  become: true
   notify: "build cm4io-fan"
 - name: "Load module at boot"
   ansible.builtin.copy:
