--- a/roles/common-users/tasks/main.yml
+++ b/roles/common-users/tasks/main.yml
@@ -4,7 +4,7 @@
     name: "{{ item.name }}"
     gid: "{{ item.gid }}"
     state: present
-  become: yes
+  become: true
   loop: "{{ common__unix_groups }}"
 - name: Create base users
   ansible.builtin.user:
@@ -16,7 +16,7 @@
     shell: /bin/bash
     state: present
     uid: "{{ item.uid }}"
-  become: yes
+  become: true
   loop: "{{ common__unix_users }}"
 - name: Deploy public keys to ansible user
   ansible.posix.authorized_key:
@@ -26,39 +26,39 @@
   loop: "{{ common__keys }}"
   loop_control:
     label: "{{ item.description }}"
-  become: yes
+  become: true
 - name: Setup sudoers
   template:
     src: sudoers.j2
     dest: /etc/sudoers.d/ansible
     validate: 'visudo -cf %s'
     mode: 0440
-  become: yes
+  become: true
 
 # Cleanup From Provisioning
 - name: Remove provision user
   user:
     name: provision
-    remove: yes
+    remove: true
     state: absent
-  become: yes
+  become: true
   when: ansible_user != "provision"
 - name: Remove provision group
   group:
     name: provision
     state: absent
-  become: yes
+  become: true
   when: ansible_user != "provision"
 - name: Remove ubuntu user
   user:
     name: ubuntu
-    remove: yes
+    remove: true
     state: absent
-  become: yes
+  become: true
   when: ansible_user != "ubuntu"
 - name: Remove ubuntu group
   group:
     name: ubuntu
     state: absent
-  become: yes
+  become: true
   when: ansible_user != "ubuntu"
