--- a/roles/docker-brultech-serial2mqtt/tasks/main.yml
+++ b/roles/docker-brultech-serial2mqtt/tasks/main.yml
@@ -103,7 +103,7 @@
         tls_options:
           ca_certs: /etc/ssl/certs/ca-certificates.crt
         username: brultech-serial2mqtt
-        usetls: yes
+        usetls: true
 
 - name: "Get brultech user info"
   ansible.builtin.getent:
@@ -130,7 +130,7 @@
             - "/etc/localtime:/etc/localtime:ro"
             - "/etc/timezone:/etc/timezone:ro"
             - "/home/brultech/config:/config:ro"
-    pull: yes
+    pull: true
     restarted: "{{ config.changed | bool }}"
   register: status
   vars:
