--- a/roles/vyos-vrrp/tasks/main.yml
+++ b/roles/vyos-vrrp/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Setup VRRP Groups and Sync Groups
   vyos.vyos.vyos_config:
     src: vrrp_groups.j2
-    save: yes
+    save: true
   when: "vyos_vrrp__groups | default([]) | length > 0"
   tags:
     - vrrp
@@ -11,7 +11,7 @@
 - name: Setup Connection Tracking Synchronization
   vyos.vyos.vyos_config:
     src: conntrack_sync.j2
-    save: yes
+    save: true
   when: "vyos_vrrp__groups | default([]) | length > 0"
   tags:
     - vrrp
