--- a/group_vars/kairos.yml
+++ b/group_vars/kairos.yml
@@ -14,3 +14,9 @@ common__gateway_v4_address: 10.11.0.1
 common__nameservers:
   addresses:
     - 10.11.0.1
+
+kairos_managed_networks:
+  - name: services
+    address: "{{ common__ip_addresses | ansible.utils.ipaddr('10.11.0.0/23') | first }}"
+    gateway: 10.11.0.1
+    vlan_id: 11
